DOC-2350: Fix broken xrefs

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -64,9 +64,9 @@
 ** xref:contributing-docs.adoc[Contribute to documentation]
 * Plugins
 ** Premium plugins
-*** xref:a11ychecker.adoc[Accessibility Checker]
+*** xref:premium-a11ychecker.adoc[Accessibility Checker]
 *** xref:premium-advcode.adoc[Advanced Code Editor]
-*** xref:advtable.adoc[Advanced Tables]
+*** xref:premium-advtable.adoc[Advanced Tables]
 *** xref:premium-casechange.adoc[Case Change]
 *** xref:premium-checklist.adoc[Checklist]
 *** Comments
@@ -76,16 +76,16 @@
 **** xref:comments_embedded_mode.adoc[Embedded mode]
 **** xref:comments_toolbars_menus.adoc[Toolbar buttons and menu items]
 **** xref:comments_commands_events_apis.adoc[Commands]
-*** xref:mediaembed.adoc[Enhanced Media Embed]
+*** xref:premium-mediaembed.adoc[Enhanced Media Embed]
 *** xref:premium-export.adoc[Export]
 *** xref:premium-formatpainter.adoc[Format Painter]
-*** xref:linkchecker.adoc[Link Checker]
+*** xref:premium-linkchecker.adoc[Link Checker]
 *** xref:premium-mentions.adoc[Mentions]
 *** xref:premium-moxiemanager.adoc[MoxieManager]
 *** xref:premium-pageembed.adoc[Page Embed]
 *** xref:premium-permanentpen.adoc[Permanent Pen]
-*** xref:powerpaste.adoc[PowerPaste]
-*** xref:tinymcespellchecker.adoc[Spell Checker Pro]
+*** xref:premium-powerpaste.adoc[PowerPaste]
+*** xref:premium-tinymcespellchecker.adoc[Spell Checker Pro]
 *** xref:premium-tinydrive.adoc[Tiny Drive]
 *** xref:rtc-plugin.adoc[Real-time Collaboration]
 ** Open source plugins
