--- a/modules/ROOT/pages/advanced-events.adoc
+++ b/modules/ROOT/pages/advanced-events.adoc
@@ -491,7 +491,7 @@ The following event is provided by the xref:importcss.adoc[Import CSS plugin].
 [[linkcheckerevents]]
 === Link checker events
 
-The following event is provided by the xref:linkchecker.adoc[Link Checker plugin].
+The following event is provided by the xref:premium-linkchecker.adoc[Link Checker plugin].
 
 |===
 | Name | Data | Description
@@ -517,7 +517,7 @@ The following event is provided by the xref:lists.adoc[Lists plugin].
 [[mediaembedevents]]
 === Media Embed events
 
-The following event is provided by the xref:mediaembed.adoc[Media Embed plugin].
+The following event is provided by the xref:premium-mediaembed.adoc[Media Embed plugin].
 
 |===
 | Name | Data | Description
@@ -568,7 +568,7 @@ The following events are provided by the xref:premium-permanentpen.adoc[Permanen
 [[powerpasteevents]]
 === PowerPaste events
 
-The following events are provided by the xref:powerpaste.adoc[PowerPaste plugin].
+The following events are provided by the xref:premium-powerpaste.adoc[PowerPaste plugin].
 
 |===
 | Name | Data | Description
