--- a/modules/ROOT/pages/creating-a-plugin.adoc
+++ b/modules/ROOT/pages/creating-a-plugin.adoc
@@ -98,7 +98,7 @@ If a custom plugin includes any custom UI created using {productname}'s xref:ui-
 +
 The files should be JavaScript files and use the relevant language code as the file name. For example: {productname} will search for a Spanish translation file at `'<your plugin>/langs/es_ES.js'`, where `<your plugin>` is to the directory that contains the plugin's entry point file. For a list of supported languages, see: xref:configure-localization.adoc#supportedlanguages[Supported languages].
 
-. In each translation file, add translation strings by passing an object containing key-value pairs of source strings and translation strings to the xref:api/tinymce/root_tinymce.adoc#addI18n[`tinymce.addI18n()` API].
+. In each translation file, add translation strings by passing an object containing key-value pairs of source strings and translation strings to the xref:apis/tinymce.root.adoc#addI18n[`tinymce.addI18n()` API].
 . In the plugin's entry point file, call `tinymce.PluginManager.requireLangPack()` and pass it the plugin identifier and a comma-delimitated string of the language codes to load.
 
 === Example: The content of a translation file for additional Spanish translations
