--- a/modules/ROOT/pages/editor-and-features.adoc
+++ b/modules/ROOT/pages/editor-and-features.adoc
@@ -58,8 +58,8 @@ Extend the xref:configure.adoc[{productname} configuration] to include any addit
 * xref:premium-pageembed.adoc[Page Embed]
 * xref:premium-permanentpen.adoc[Permanent Pen]
 * xref:premium-formatpainter.adoc[Format Painter]
-* xref:powerpaste.adoc[PowerPaste]
-* xref:tinymcespellchecker.adoc[Spell Checker Pro]
+* xref:premium-powerpaste.adoc[PowerPaste]
+* xref:premium-tinymcespellchecker.adoc[Spell Checker Pro]
 
 NOTE: `spellchecker_rpc_url` is *not* required when enabling this plugin via xref:cloud-deployment-guide.adoc[{cloudname}].
 
@@ -68,10 +68,10 @@ NOTE: `spellchecker_rpc_url` is *not* required when enabling this plugin via xre
 NOTE: Configuration of the `imagetools_cors_hosts` and `imagetools_proxy` properties occurs automatically.
 
 * xref:premium-moxiemanager.adoc[Moxie Manager]
-* xref:a11ychecker.adoc[Accessibility Checker]
+* xref:premium-a11ychecker.adoc[Accessibility Checker]
 * xref:premium-advcode.adoc[Advanced Code Editor]
-* xref:mediaembed.adoc[Enhanced Media Embed]
-* xref:linkchecker.adoc[Link Checker]
+* xref:premium-mediaembed.adoc[Enhanced Media Embed]
+* xref:premium-linkchecker.adoc[Link Checker]
 
 NOTE: It may take up to 30 minutes for the purchased plugin to be available to {productname}. Clear the browser's cache.
 
@@ -124,8 +124,8 @@ Extend the xref:configure.adoc[{productname} configuration] to include any addit
 * xref:premium-pageembed.adoc[Page Embed]
 * xref:premium-permanentpen.adoc[Permanent Pen]
 * xref:premium-formatpainter.adoc[Format Painter]
-* xref:powerpaste.adoc[Powerpaste]
-* xref:tinymcespellchecker.adoc[Spell Checker Pro]
+* xref:premium-powerpaste.adoc[Powerpaste]
+* xref:premium-tinymcespellchecker.adoc[Spell Checker Pro]
 
 NOTE: `spellchecker_rpc_url` is *not* required when enabling this plugin via xref:cloud-deployment-guide.adoc[{cloudname}].
 
@@ -134,7 +134,7 @@ NOTE: `spellchecker_rpc_url` is *not* required when enabling this plugin via xre
 NOTE: Configuration of the `imagetools_cors_hosts` and `imagetools_proxy` properties occurs automatically.
 
 * xref:premium-moxiemanager.adoc[Moxie Manager]
-* xref:a11ychecker.adoc[Accessibility Checker]
+* xref:premium-a11ychecker.adoc[Accessibility Checker]
 * xref:premium-advcode.adoc[Advanced Code Editor]
-* xref:mediaembed.adoc[Enhanced Media Embed]
-* xref:linkchecker.adoc[Link Checker]
+* xref:premium-mediaembed.adoc[Enhanced Media Embed]
+* xref:premium-linkchecker.adoc[Link Checker]
