--- a/modules/ROOT/pages/editor-command-identifiers.adoc
+++ b/modules/ROOT/pages/editor-command-identifiers.adoc
@@ -328,7 +328,7 @@ include::partial$commands/advlist-cmds.adoc[]
 [[advancedtables]]
 ==== Advanced Tables
 
-The following commands require the xref:advtable.adoc[Advanced Tables (`advtable`)] plugin.
+The following commands require the xref:premium-advtable.adoc[Advanced Tables (`advtable`)] plugin.
 
 include::partial$commands/advtable-cmds.adoc[]
 
@@ -505,7 +505,7 @@ include::partial$commands/permanentpen-cmds.adoc[]
 [[powerpaste]]
 ==== PowerPaste
 
-The following command requires the xref:powerpaste.adoc[PowerPaste (`powerpaste`)] plugin.
+The following command requires the xref:premium-powerpaste.adoc[PowerPaste (`powerpaste`)] plugin.
 
 include::partial$commands/powerpaste-cmds.adoc[]
 
@@ -549,7 +549,7 @@ include::partial$commands/spellchecker-cmds.adoc[]
 [[spellcheckerpro]]
 ==== Spell Checker Pro
 
-The following commands require the xref:tinymcespellchecker.adoc[Spell Checker Pro (`tinymcespellchecker`)] plugin.
+The following commands require the xref:premium-tinymcespellchecker.adoc[Spell Checker Pro (`tinymcespellchecker`)] plugin.
 
 include::partial$commands/tinymcespellchecker-cmds.adoc[]
 
