--- a/modules/ROOT/pages/embed-media.adoc
+++ b/modules/ROOT/pages/embed-media.adoc
@@ -3,7 +3,7 @@
 :keywords: enterprise pricing video youtube vimeo mp3 mp4 mov movie clip film link linkchecking linkchecker mediaembed media
 :title_nav: Media embedding
 
-The xref:mediaembed.adoc[Enhanced Media Embed plugin] makes it easy to add an enhanced content creation experience in your website or app with enriched media previews from the most popular web sources. Facebook, YouTube, Flickr, NY Times, Vimeo, Hulu, Tumblr, CodePen, SlideShare, TechCrunch, WordPress, Twitch, Spotify ... and many more!
+The xref:premium-mediaembed.adoc[Enhanced Media Embed plugin] makes it easy to add an enhanced content creation experience in your website or app with enriched media previews from the most popular web sources. Facebook, YouTube, Flickr, NY Times, Vimeo, Hulu, Tumblr, CodePen, SlideShare, TechCrunch, WordPress, Twitch, Spotify ... and many more!
 
 By easy, we mean easy. The service automatically "`looks behind the link`" to see whether a URL in the {productname} editor points to a rich media source. That URL will resolve into an enhanced media thumbnail whenever possible.
 
