--- a/modules/ROOT/pages/enterprise-accessibility.adoc
+++ b/modules/ROOT/pages/enterprise-accessibility.adoc
@@ -2,7 +2,7 @@
 :description: WCAG & Section 508 compliant accessibility checking.
 :keywords: a11y accessibility
 
-For most developers, accessibility has become critical to the usability of their solutions. {productname}'s xref:a11ychecker.adoc[accessibility checker] (based on technology built by link:{url}[{companyname}]) makes checking for common accessibility issues incredibly easy for content creators by using an interface that steps them through each error, and in most cases also recommends a solution.
+For most developers, accessibility has become critical to the usability of their solutions. {productname}'s xref:premium-a11ychecker.adoc[accessibility checker] (based on technology built by link:{url}[{companyname}]) makes checking for common accessibility issues incredibly easy for content creators by using an interface that steps them through each error, and in most cases also recommends a solution.
 
 The check is achieved within the editor before the user posts their content and operates in a similar fashion to running a spell check in Word.
 
