--- a/modules/ROOT/pages/enterprise-tinydrive.adoc
+++ b/modules/ROOT/pages/enterprise-tinydrive.adoc
@@ -25,5 +25,5 @@ liveDemo::drive-demo[]
 
 :pluginname: Tiny Drive
 :pluginminimumplan: tierone
-:plugindocspage: ../../tinydrive/index.adoc
+:plugindocspage: tinydrive.adoc
 include::partial$misc/purchase-premium-plugins.adoc[]
