--- a/modules/ROOT/pages/full-featured.adoc
+++ b/modules/ROOT/pages/full-featured.adoc
@@ -20,8 +20,8 @@ The following plugins are excluded from this example:
 * xref:bbcode.adoc[BBCode] -- Changes the markup used for the content.
 * xref:code.adoc[Code] -- xref:premium-advcode.adoc[*Advanced Code Editor*] included instead.
 * xref:fullpage.adoc[Full Page] -- Used for modifying HTML `<head>` elements.
-* xref:paste.adoc[Paste] -- xref:powerpaste.adoc[*PowerPaste*] included instead.
-* xref:spellchecker.adoc[Spellchecker] -- xref:tinymcespellchecker.adoc[*Spell Checker Pro*] included instead.
+* xref:paste.adoc[Paste] -- xref:premium-powerpaste.adoc[*PowerPaste*] included instead.
+* xref:spellchecker.adoc[Spellchecker] -- xref:premium-tinymcespellchecker.adoc[*Spell Checker Pro*] included instead.
 * xref:tabfocus.adoc[Tab Focus] -- Changes the behavior of the TAB-key within the editor.
 
 == Full Featured: Non-Premium Plugins
