--- a/modules/ROOT/pages/premium-export.adoc
+++ b/modules/ROOT/pages/premium-export.adoc
@@ -62,7 +62,7 @@ The following plugins are not supported:
 
 * xref:bbcode.adoc[BBCode]
 * xref:comments.adoc[Comments]
-* xref:mediaembed.adoc[Enhanced Media Embed]
+* xref:premium-mediaembed.adoc[Enhanced Media Embed]
 * xref:fullpage.adoc[Fullpage]
 * xref:legacyoutput.adoc[Legacy Output]
 * xref:media.adoc[Media]
