--- a/modules/ROOT/pages/premium-tinymcespellchecker.adoc
+++ b/modules/ROOT/pages/premium-tinymcespellchecker.adoc
@@ -8,7 +8,7 @@
 
 include::partial$misc/premiumplugin.adoc[]
 
-*Spell Checker Pro* adds spell checking as-you-type capabilities to {productname}. For information on the supported languages, refer to xref:tinymcespellchecker.adoc#spellchecker_language[this] section.
+*Spell Checker Pro* adds spell checking as-you-type capabilities to {productname}. For information on the supported languages, refer to xref:premium-tinymcespellchecker.adoc#spellchecker_language[this] section.
 
 liveDemo::spellcheckerpro[]
 
