--- a/modules/ROOT/pages/premium.adoc
+++ b/modules/ROOT/pages/premium.adoc
@@ -11,7 +11,7 @@
 
 |
 [.lead]
-xref:a11ychecker.adoc[Accessibility Checker]
+xref:premium-a11ychecker.adoc[Accessibility Checker]
 
 Checks the contents of the editor for WCAG & Section 508 accessibility problems.
 
@@ -23,7 +23,7 @@ How to setup TinyMCE's Advanced Code Editor plugin.
 
 |
 [.lead]
-xref:advtable.adoc[Advanced Tables]
+xref:premium-advtable.adoc[Advanced Tables]
 
 Add advanced functionality to tables.
 
@@ -47,7 +47,7 @@ The TinyMCE Comments plugin
 
 |
 [.lead]
-xref:mediaembed.adoc[Enhanced Media Embed]
+xref:premium-mediaembed.adoc[Enhanced Media Embed]
 
 Add rich media previews inside TinyMCE.
 
@@ -65,7 +65,7 @@ Quickly apply formats to multiple pieces of text.
 
 |
 [.lead]
-xref:linkchecker.adoc[Link Checker]
+xref:premium-linkchecker.adoc[Link Checker]
 
 Validate links, as you type.
 
@@ -95,11 +95,11 @@ Apply formats while typing.
 
 |
 [.lead]
-xref:powerpaste.adoc[PowerPaste]
+xref:premium-powerpaste.adoc[PowerPaste]
 
 |
 [.lead]
-xref:tinymcespellchecker.adoc[Spell Checker Pro]
+xref:premium-tinymcespellchecker.adoc[Spell Checker Pro]
 
 Check spelling as-you-type in TinyMCE.
 
