--- a/modules/ROOT/pages/release-notes5014.adoc
+++ b/modules/ROOT/pages/release-notes5014.adoc
@@ -67,7 +67,7 @@ These changes solve bugs with TinyMCE table functionality behaving unexpectedly 
 
 Enhanced Media Embed 2.2.3 addresses an issue where embedded snippets were not created when inputting links and pressing the Enter Key in Firefox.
 
-For information on Enhanced Media Embed refer to the xref:mediaembed.adoc[documentation].
+For information on Enhanced Media Embed refer to the xref:premium-mediaembed.adoc[documentation].
 
 ==== PowerPaste
 
