--- a/modules/ROOT/pages/release-notes505.adoc
+++ b/modules/ROOT/pages/release-notes505.adoc
@@ -42,4 +42,4 @@ There is also a demo provided to explore the *Tiny Drive* capabilities xref:tiny
 
 *Link Checker* 2.0.2 comes with numerous bug fixes to the previous versions. A number of improvements have been made for accessibility and an issue has been fixed where the linkchecker context menu items weren't appearing in TinyMCE 5.
 
-For more information on *Link Checker* refer to the full xref:linkchecker.adoc[documentation].
+For more information on *Link Checker* refer to the full xref:premium-linkchecker.adoc[documentation].
