--- a/modules/ROOT/pages/release-notes507.adoc
+++ b/modules/ROOT/pages/release-notes507.adoc
@@ -52,7 +52,7 @@ There is also a demo provided to explore the *Tiny Drive* capabilities xref:tiny
 
 *Enhanced Media Embed* 2.2.0 adds a new `mediaembed_inline_styles` setting allowing styles to be embedded inline, instead of requiring additional content css to be added to your site.
 
-For more information on *Enhanced Media Embed* refer to the full xref:mediaembed.adoc#mediaembed_inline_styles[documentation].
+For more information on *Enhanced Media Embed* refer to the full xref:premium-mediaembed.adoc#mediaembed_inline_styles[documentation].
 
 == Updates and enhancements
 
