--- a/modules/ROOT/pages/release-notes5102.adoc
+++ b/modules/ROOT/pages/release-notes5102.adoc
@@ -26,7 +26,7 @@ The {productname} 5.10.2 release includes an accompanying release of the *Enhanc
 
 *Enhanced Media Embed* 2.2.6 fixes the `mediaembed` content CSS loading incorrectly, which caused it to not display in previews.
 
-For information on the Enhanced Media Embed plugin, see: xref:mediaembed.adoc[Enhanced Media Embed plugin].
+For information on the Enhanced Media Embed plugin, see: xref:premium-mediaembed.adoc[Enhanced Media Embed plugin].
 
 === Page Embed 1.1.1
 
@@ -57,10 +57,10 @@ This version requires Java 8 or higher. For information on the removal of Java 7
 
 For information on:
 
-* The Spell Checker Pro plugin, see: xref:tinymcespellchecker.adoc[Spell Checker Pro plugin].
-* The Link Checker plugin, see: xref:linkchecker.adoc[Link Checker plugin].
+* The Spell Checker Pro plugin, see: xref:premium-tinymcespellchecker.adoc[Spell Checker Pro plugin].
+* The Link Checker plugin, see: xref:premium-linkchecker.adoc[Link Checker plugin].
 * The Image Tools plugin, see: xref:imagetools.adoc[Image Tools plugin].
-* The Enhanced Media Embed plugin, see: xref:mediaembed.adoc[Enhanced Media Embed plugin].
+* The Enhanced Media Embed plugin, see: xref:premium-mediaembed.adoc[Enhanced Media Embed plugin].
 * Deploying the server-side components, see: xref:server.adoc[Server-side component installation].
 
 === Security related dependency update for all 3 server-side services
