--- a/modules/ROOT/pages/release-notes5104.adoc
+++ b/modules/ROOT/pages/release-notes5104.adoc
@@ -26,7 +26,7 @@ In the previous release, _Spell Checker Pro_ would change page focus incorrectly
 
 _Spell Checker Pro_ 2.5.1, which accompanies this release, corrects this so that the page focus no longer moves in this circumstance.
 
-For information on the Spell Checker Pro plugin, see: xref:tinymcespellchecker.adoc[Spell Checker Pro plugin].
+For information on the Spell Checker Pro plugin, see: xref:premium-tinymcespellchecker.adoc[Spell Checker Pro plugin].
 
 [[general-bug-fixes]]
 == General bug fixes
