--- a/modules/ROOT/pages/release-notes56.adoc
+++ b/modules/ROOT/pages/release-notes56.adoc
@@ -103,7 +103,7 @@ The {productname} 5.6 release includes an accompanying release of the *Accessibi
 
 *Accessibility Checker* 2.3.1 fixes an issue where internal {productname} elements were not ignored.
 
-For information on the Accessibility Checker plugin, see: xref:a11ychecker.adoc[Accessibility Checker plugin].
+For information on the Accessibility Checker plugin, see: xref:premium-a11ychecker.adoc[Accessibility Checker plugin].
 
 === Advanced Code Editor 2.3.0
 
@@ -165,7 +165,7 @@ The {productname} 5.6 release includes an accompanying release of the *PowerPast
 * Fixed the `Cut` menu item not working in the latest version of Firefox.
 * Fixed two Cross-Site Scripting (XSS) vulnerability issues. For more information, see: xref:security-fixes[Security fixes].
 
-For information on the PowerPaste plugin, see: xref:powerpaste.adoc[PowerPaste plugin].
+For information on the PowerPaste plugin, see: xref:premium-powerpaste.adoc[PowerPaste plugin].
 
 === Spell Checker Pro 2.2.0
 
@@ -182,7 +182,7 @@ The {productname} 5.6 release includes an accompanying release of the *Spell Che
 * Fixed the spellchecker dialog not checking incorrect words outside of the window viewport.
 * Fixed the spellchecker as-you-type functionality interfering with the dialog.
 
-For information on the Spell Checker Pro plugin, see: xref:tinymcespellchecker.adoc[Spell Checker Pro plugin].
+For information on the Spell Checker Pro plugin, see: xref:premium-tinymcespellchecker.adoc[Spell Checker Pro plugin].
 
 [[general-bug-fixes]]
 == General bug fixes
