--- a/modules/ROOT/pages/release-notes582.adoc
+++ b/modules/ROOT/pages/release-notes582.adoc
@@ -38,7 +38,7 @@ The {productname} 5.8.2 release includes an accompanying release of the *PowerPa
 * Fixed indented text pasted from Google Docs unable to be outdented.
 * Pasted images that failed to be converted to a blob would cause an uncaught exception and lock up the editor.
 
-For information on the PowerPaste plugin, see: xref:powerpaste.adoc[PowerPaste plugin].
+For information on the PowerPaste plugin, see: xref:premium-powerpaste.adoc[PowerPaste plugin].
 
 === Spell Checker Pro 2.3.2
 
@@ -48,7 +48,7 @@ The {productname} 5.8.2 release includes an accompanying release of the *Spell C
 
 * Entering `hasOwnProperty` into the editor was throwing exceptions.
 
-For information on the Spell Checker Pro plugin, see: xref:tinymcespellchecker.adoc[Spell Checker Pro plugin].
+For information on the Spell Checker Pro plugin, see: xref:premium-tinymcespellchecker.adoc[Spell Checker Pro plugin].
 
 [[general-bug-fixes]]
 == General bug fixes
