--- a/modules/ROOT/pages/rtc-supported-functionality.adoc
+++ b/modules/ROOT/pages/rtc-supported-functionality.adoc
@@ -40,7 +40,7 @@ The following plugins are currently supported:
  ** The xref:link.adoc#rel_list[`rel_list`] option is not supported.
 * xref:lists.adoc[Lists (`lists`)]
 * xref:premium-moxiemanager.adoc[MoxieManager (`moxiemanager`)]
-* xref:powerpaste.adoc[PowerPaste (`powerpaste`)]
+* xref:premium-powerpaste.adoc[PowerPaste (`powerpaste`)]
 * xref:print.adoc[Print (`print`)]
 * xref:save.adoc[Save (`save`)]
 * xref:tabfocus.adoc[Tab Focus (`tabfocus`)]
