--- a/modules/ROOT/pages/spell-checking.adoc
+++ b/modules/ROOT/pages/spell-checking.adoc
@@ -53,7 +53,7 @@ Review the xref:spellchecker.adoc[Spell Checker plugin] for advanced configurati
 
 == TinyMCE Spell Checker Pro plugin
 
-Use the xref:tinymcespellchecker.adoc[Spell Checker Pro plugin] for scalable enterprise-grade spell check as-you-type functionality. *Spell Checker Pro* requires both a client-side plugin to be configured and a server-side component to be installed and configured.
+Use the xref:premium-tinymcespellchecker.adoc[Spell Checker Pro plugin] for scalable enterprise-grade spell check as-you-type functionality. *Spell Checker Pro* requires both a client-side plugin to be configured and a server-side component to be installed and configured.
 
 Review the {productname} Premium Features xref:check-spelling.adoc[documentation for Spelling]. Learn more about link:{pricingpage}[{productname} Premium Products here].
 
