--- a/modules/ROOT/pages/tiny-comments.adoc
+++ b/modules/ROOT/pages/tiny-comments.adoc
@@ -30,5 +30,5 @@ liveDemo::comments-embedded[]
 
 :pluginname: Comments
 :pluginminimumplan: enterprise
-:plugindocspage: comments/index.adoc
+:plugindocspage: introduction_to_tiny_comments.adoc
 include::partial$misc/purchase-premium-plugins.adoc[]
