--- a/modules/ROOT/pages/work-with-plugins.adoc
+++ b/modules/ROOT/pages/work-with-plugins.adoc
@@ -169,7 +169,7 @@ Customizing {productname} with the default plugins is that easy. There are 60 pl
 
 | *9*
 | PowerPaste
-| xref:powerpaste.adoc[powerpaste]
+| xref:premium-powerpaste.adoc[powerpaste]
 
 | *10*
 | Code Sample
