--- a/modules/ROOT/partials/configuration/content_langs.adoc
+++ b/modules/ROOT/partials/configuration/content_langs.adoc
@@ -5,7 +5,7 @@ include::partial$misc/requires_5_9v.adoc[]
 
 include::partial$configuration/content_langs_base.adoc[]
 
-There is no default value for the `content_langs` option. If no value is specified, the `language` toolbar button and menu item are not available. A default value for this option is provided by the Spell Checker Pro plugin. For information on using the `content_langs` option with the Spell Checker Pro plugin, see: xref:tinymcespellchecker.adoc#content_langs[Spell Checker Pro plugin - `content_langs`].
+There is no default value for the `content_langs` option. If no value is specified, the `language` toolbar button and menu item are not available. A default value for this option is provided by the Spell Checker Pro plugin. For information on using the `content_langs` option with the Spell Checker Pro plugin, see: xref:premium-tinymcespellchecker.adoc#content_langs[Spell Checker Pro plugin - `content_langs`].
 
 *Type:* `Array`
 
