--- a/modules/ROOT/partials/configuration/images_file_types.adoc
+++ b/modules/ROOT/partials/configuration/images_file_types.adoc
@@ -6,7 +6,7 @@ include::partial$misc/requires_5_6v.adoc[]
 This option configures which image file formats are accepted by the editor. Changing this option will adjust the following editor behaviour:
 
 * Which image file formats are allowed to be uploaded in the xref:image.adoc[Image] dialog.
-* Which image file formats are recognized and placed in an `img` element by the xref:paste.adoc[Paste] and xref:powerpaste.adoc[PowerPaste] `smart_paste` functionality.
+* Which image file formats are recognized and placed in an `img` element by the xref:paste.adoc[Paste] and xref:premium-powerpaste.adoc[PowerPaste] `smart_paste` functionality.
 
 *Type:* `String`
 
