--- a/modules/ROOT/partials/configuration/spellchecker_dialog.adoc
+++ b/modules/ROOT/partials/configuration/spellchecker_dialog.adoc
@@ -2,8 +2,8 @@
 
 This option specifies the primary spell checking mode.
 
-* When set to `true`, the xref:tinymcespellchecker.adoc#toolbarbuttons[`spellcheck` toolbar button] will open a dialog that will step the user through each potential spelling error in the document.
-* When set to `false`, the xref:tinymcespellchecker.adoc#toolbarbuttons[`spellcheck` toolbar button] will enable or disable as-you-type spell checking and the xref:tinymcespellchecker.adoc#toolbarbuttons[`spellcheckdialog` toolbar button] will open the spell checker dialog.
+* When set to `true`, the xref:premium-tinymcespellchecker.adoc#toolbarbuttons[`spellcheck` toolbar button] will open a dialog that will step the user through each potential spelling error in the document.
+* When set to `false`, the xref:premium-tinymcespellchecker.adoc#toolbarbuttons[`spellcheck` toolbar button] will enable or disable as-you-type spell checking and the xref:premium-tinymcespellchecker.adoc#toolbarbuttons[`spellcheckdialog` toolbar button] will open the spell checker dialog.
 
 *Type:* `Boolean`
 
