--- a/modules/ROOT/partials/misc/available-context-menu-sections.adoc
+++ b/modules/ROOT/partials/misc/available-context-menu-sections.adoc
@@ -28,7 +28,7 @@ The identifier below will add a context menu _section_ containing one or more it
 | Adds the _Link..._ item for opening the *Insert/Edit Link* dialog.
 
 | linkchecker
-| xref:linkchecker.adoc[Link Checker]
+| xref:premium-linkchecker.adoc[Link Checker]
 | Adds the _Ignore_ item on links marked as broken, allowing the user to instruct linkchecker to ignore the link.
 
 | lists
