--- a/modules/ROOT/partials/misc/plugin-toolbar-button-id-boilerplate.adoc
+++ b/modules/ROOT/partials/misc/plugin-toolbar-button-id-boilerplate.adoc
@@ -1,4 +1,4 @@
-ifeval::["{docname}" == "advanced/available-toolbar-buttons"]
+ifeval::["{docname}" == "available-toolbar-buttons"]
 [#{plugincode}plugin]
 == {pluginname} plugin
 
@@ -12,15 +12,21 @@ include::partial$toolbar-button-ids/{plugincode}-toolbar-buttons.adoc[]
 endif::[]
 
 ifeval::["{plugincode}" == "comments"]
-For information on the {pluginname} plugin, see: xref:plugins/{plugincategory}/{plugincode}/introduction_to_tiny_comments.adoc[Plugins - The {pluginname} plugin]
+For information on the {pluginname} plugin, see: xref:introduction_to_tiny_comments.adoc[Plugins - The {pluginname} plugin]
 endif::[]
 
 ifeval::["{plugincode}" != "comments"]
-For information on the {pluginname} plugin, see: xref:plugins/{plugincategory}/{plugincode}.adoc[Plugins - The {pluginname} plugin]
+ifeval::["{plugincategory}" == "premium"]
+For information on the {pluginname} plugin, see: xref:{plugincategory}-{plugincode}.adoc[Plugins - The {pluginname} plugin]
+endif::[]
+
+ifeval::["{plugincategory}" != "premium"]
+For information on the {pluginname} plugin, see: xref:{plugincode}.adoc[Plugins - The {pluginname} plugin]
+endif::[]
 endif::[]
 
 endif::[]
-ifeval::["{docname}" != "advanced/available-toolbar-buttons"]
+ifeval::["{docname}" != "available-toolbar-buttons"]
 [[toolbarbuttons]]
 == Toolbar buttons
 
