--- a/modules/ROOT/partials/misc/plugin_support_table.adoc
+++ b/modules/ROOT/partials/misc/plugin_support_table.adoc
@@ -6,7 +6,7 @@ The following table lists the premium plugins supported by {companynameformal} a
 |===
 | Plugin | TinyMCE 4 | TinyMCE 5
 
-| xref:a11ychecker.adoc[Accessibility Checker]
+| xref:premium-a11ychecker.adoc[Accessibility Checker]
 | {tick}
 | {tick}
 
@@ -14,7 +14,7 @@ The following table lists the premium plugins supported by {companynameformal} a
 | {tick}
 | {tick}
 
-| xref:advtable.adoc[Advanced Tables]
+| xref:premium-advtable.adoc[Advanced Tables]
 | {cross}
 | Version *5.1.2* and higher
 
@@ -30,7 +30,7 @@ The following table lists the premium plugins supported by {companynameformal} a
 | {tick}
 | {tick}
 
-| xref:mediaembed.adoc[Enhanced Media Embed]
+| xref:premium-mediaembed.adoc[Enhanced Media Embed]
 | {tick}
 | {tick}
 
@@ -42,7 +42,7 @@ The following table lists the premium plugins supported by {companynameformal} a
 | {tick}
 | {tick}
 
-| xref:linkchecker.adoc[Link Checker]
+| xref:premium-linkchecker.adoc[Link Checker]
 | {tick}
 | {tick}
 
@@ -62,7 +62,7 @@ The following table lists the premium plugins supported by {companynameformal} a
 | {cross}
 | {tick}
 
-| xref:powerpaste.adoc[PowerPaste]
+| xref:premium-powerpaste.adoc[PowerPaste]
 | {tick}
 | {tick}
 
@@ -70,7 +70,7 @@ The following table lists the premium plugins supported by {companynameformal} a
 | {cross}
 | Version *5.9.2* and higher
 
-| xref:tinymcespellchecker.adoc[Spell Checker Pro]
+| xref:premium-tinymcespellchecker.adoc[Spell Checker Pro]
 | {tick}
 | {tick}
 
