--- a/modules/ROOT/partials/plugin-apis/tinymcespellchecker-apis.adoc
+++ b/modules/ROOT/partials/plugin-apis/tinymcespellchecker-apis.adoc
@@ -13,7 +13,7 @@ include::partial$misc/requires_5_7v.adoc[]
 
 | setLanguage
 | language: `string`
-| Set the current language for spellchecking. This must be a supported language code (case-sensitive). For a list of supported languages, see: xref:tinymcespellchecker.adoc#supportedlanguages[Spell Checker Pro - `Supported languages`].
+| Set the current language for spellchecking. This must be a supported language code (case-sensitive). For a list of supported languages, see: xref:premium-tinymcespellchecker.adoc#supportedlanguages[Spell Checker Pro - `Supported languages`].
 |===
 
 *Examples*
