--- a/modules/ROOT/pages/check-links.adoc
+++ b/modules/ROOT/pages/check-links.adoc
@@ -3,7 +3,7 @@
 :keywords: enterprise pricing video youtube vimeo mp3 mp4 mov movie clip film link linkchecking linkchecker mediaembed media
 :title_nav: Hyperlink checking
 
-The xref:linkchecker.adoc[Link Checker plugin] provides a link checking service right within the {productname} editor.
+The xref:premium-linkchecker.adoc[Link Checker plugin] provides a link checking service right within the {productname} editor.
 
 Think of Link Checker as "spell-checking for URLs". But instead of checking spelling, it will let you know if a URL in the editor is valid, invalid or questionable. This is a huge time-saver for anyone who creates content -- no more having to double-check URLs, especially in imported content. Not to mention the benefit of no longer frustrating readers with broken hyperlinks.
 
@@ -16,7 +16,7 @@ Once you have the server-side component installed, additional configuration to y
 
 For information on configuring the server-side component, see: xref:server.adoc[Configure server-side components].
 
-You will also find more Self-hosted setup information on the xref:linkchecker.adoc[Link Checker plugin page].
+You will also find more Self-hosted setup information on the xref:premium-linkchecker.adoc[Link Checker plugin page].
 
 == Link Checker cloud setup
 
