--- a/modules/ROOT/pages/editor-plugin-version.adoc
+++ b/modules/ROOT/pages/editor-plugin-version.adoc
@@ -70,7 +70,7 @@ The `identifier` of the plugin is used as a query parameter. This table summaris
 |===
 | Plugin | Identifier | Supported Versions
 
-| xref:a11ychecker.adoc[Accessibility Checker]
+| xref:premium-a11ychecker.adoc[Accessibility Checker]
 | `a11ychecker`
 | http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/a11ychecker/available-versions[Versions]
 
@@ -78,7 +78,7 @@ The `identifier` of the plugin is used as a query parameter. This table summaris
 | `advcode`
 | http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/advcode/available-versions[Versions]
 
-| xref:advtable.adoc[Advanced Tables]
+| xref:premium-advtable.adoc[Advanced Tables]
 | `advtable`
 | http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/advtable/available-versions[Versions]
 
@@ -94,7 +94,7 @@ The `identifier` of the plugin is used as a query parameter. This table summaris
 | `comments`
 | http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/tinycomments/available-versions[Versions]
 
-| xref:mediaembed.adoc[Enhanced Media Embed]
+| xref:premium-mediaembed.adoc[Enhanced Media Embed]
 | `mediaembed`
 | http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/mediaembed/available-versions[Versions]
 
@@ -106,7 +106,7 @@ The `identifier` of the plugin is used as a query parameter. This table summaris
 | `formatpainter`
 | http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/formatpainter/available-versions[Versions]
 
-| xref:linkchecker.adoc[Link Checker]
+| xref:premium-linkchecker.adoc[Link Checker]
 | `linkchecker`
 | http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/linkchecker/available-versions[Versions]
 
@@ -122,11 +122,11 @@ The `identifier` of the plugin is used as a query parameter. This table summaris
 | `permanentpen`
 | http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/permanentpen/available-versions[Versions]
 
-| xref:powerpaste.adoc[PowerPaste]
+| xref:premium-powerpaste.adoc[PowerPaste]
 | `powerpaste`
 | http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/powerpaste/available-versions[Versions]
 
-| xref:tinymcespellchecker.adoc[Spell Checker Pro]
+| xref:premium-tinymcespellchecker.adoc[Spell Checker Pro]
 | `tinymcespellchecker`
 | http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/tinymcespellchecker/available-versions[Versions]
 
