--- a/modules/ROOT/pages/release-notes506.adoc
+++ b/modules/ROOT/pages/release-notes506.adoc
@@ -44,4 +44,4 @@ PowerPaste 5.0.0 comes with significant changes to the previous versions. Refer 
 * Improved the `Remove formatting` functionality to also remove inline style elements, such as `strong`, `b`, `em`, `i`, `sup` and `sub`.
 * Fixed an issue where pasting content with external images would lose their image src attribute.
 
-For more information on *PowerPaste* refer to the full xref:powerpaste.adoc[documentation].
+For more information on *PowerPaste* refer to the full xref:premium-powerpaste.adoc[documentation].
