--- a/modules/ROOT/pages/release-notes5101.adoc
+++ b/modules/ROOT/pages/release-notes5101.adoc
@@ -34,7 +34,7 @@ The {productname} 5.10.1 release includes an accompanying release of the *PowerP
 
 *PowerPaste* 5.6.1 fixes a bug where pasting text content with multiple items on the clipboard did not work.
 
-For information on the PowerPaste plugin, see: xref:powerpaste.adoc[PowerPaste plugin].
+For information on the PowerPaste plugin, see: xref:premium-powerpaste.adoc[PowerPaste plugin].
 
 [[accompanying-premium-self-hosted-server-side-component-changes]]
 == Accompanying Premium self-hosted server-side component changes
@@ -57,10 +57,10 @@ This version requires Java 8 or higher. For information on the removal of Java 7
 
 For information on:
 
-* The Spell Checker Pro plugin, see: xref:tinymcespellchecker.adoc[Spell Checker Pro plugin].
-* The Link Checker plugin, see: xref:linkchecker.adoc[Link Checker plugin].
+* The Spell Checker Pro plugin, see: xref:premium-tinymcespellchecker.adoc[Spell Checker Pro plugin].
+* The Link Checker plugin, see: xref:premium-linkchecker.adoc[Link Checker plugin].
 * The Image Tools plugin, see: xref:imagetools.adoc[Image Tools plugin].
-* The Enhanced Media Embed plugin, see: xref:mediaembed.adoc[Enhanced Media Embed plugin].
+* The Enhanced Media Embed plugin, see: xref:premium-mediaembed.adoc[Enhanced Media Embed plugin].
 * Deploying the server-side components, see: xref:server.adoc[Server-side component installation].
 
 === Security related dependency update for all 3 server-side services
