--- a/modules/ROOT/pages/release-notes54.adoc
+++ b/modules/ROOT/pages/release-notes54.adoc
@@ -87,7 +87,7 @@ The {productname} 5.4 release includes an accompanying release of the *PowerPast
 * Fixed PowerPaste not able to load the `wordimport.js` resource when bundled.
 * Fixed the editor `referrer_policy` option not working when loading additional resources.
 
-For information on the PowerPaste plugin, see: xref:powerpaste.adoc[PowerPaste plugin].
+For information on the PowerPaste plugin, see: xref:premium-powerpaste.adoc[PowerPaste plugin].
 
 [[accompanying-premium-self-hosted-server-side-component-changes]]
 == Accompanying Premium self-hosted server-side component changes
@@ -105,10 +105,10 @@ This version requires Java 8 or higher. For information on the removal of Java 7
 
 For information on:
 
-* The Spell Checker Pro plugin, see: xref:tinymcespellchecker.adoc[Spell Checker Pro plugin].
-* The Link Checker plugin, see: xref:linkchecker.adoc[Link Checker plugin].
+* The Spell Checker Pro plugin, see: xref:premium-tinymcespellchecker.adoc[Spell Checker Pro plugin].
+* The Link Checker plugin, see: xref:premium-linkchecker.adoc[Link Checker plugin].
 * The Image Tools plugin, see: xref:imagetools.adoc[Image Tools plugin].
-* The Enhanced Media Embed plugin, see: xref:mediaembed.adoc[Enhanced Media Embed plugin].
+* The Enhanced Media Embed plugin, see: xref:premium-mediaembed.adoc[Enhanced Media Embed plugin].
 * Deploying the server-side components, see: xref:server.adoc[Server-side component installation].
 
 === Security update for self-hosted server-side components
@@ -193,7 +193,7 @@ The *free* {productname} Spell Checker plugin (`spellchecker`) has been deprecat
 
 This change *_does not_* affect:
 
-* xref:tinymcespellchecker.adoc[The Spellchecker Pro premium plugin].
+* xref:premium-tinymcespellchecker.adoc[The Spellchecker Pro premium plugin].
 * xref:spell-checking.adoc#browser-basedspellchecking[Browser-based spell checking in {productname}].
 
 To develop and maintain a new spellchecking plugin based on the free {productname} Spell Checker plugin:
