--- a/modules/ROOT/pages/release-notes542.adoc
+++ b/modules/ROOT/pages/release-notes542.adoc
@@ -47,7 +47,7 @@ The {productname} 5.4.2 release includes an accompanying release of the *PowerPa
 * Fixed an issue where lists would become corrupt on IE 11 due to invalid empty font elements.
 * Fixed multiple new lines collapsing into a single new line when pasting plain text.
 * Fixed cut and copy not working with table selections.
-* Fixed the PowerPaste plugin converting tabs in plain text to a single space character. A xref:powerpaste.adoc#paste_tab_spaces[`paste_tab_spaces`] option has been included for setting the number of spaces used to replace a tab character.
+* Fixed the PowerPaste plugin converting tabs in plain text to a single space character. A xref:premium-powerpaste.adoc#paste_tab_spaces[`paste_tab_spaces`] option has been included for setting the number of spaces used to replace a tab character.
 
 :enterprise: true
 
